BUGFIX: Fixed grpc server registration bug; Fixed kafka serializer bug; Fixed route access declarations.